monthly summary and weekly summary added using kafka

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
+    "kafkajs": "^2.2.4",
     "pg": "^8.13.0",
     "sqlite3": "^5.1.7"
   },
