--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.7",
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
     "kafkajs": "^2.2.4",
+    "nodemailer": "^6.9.15",
     "pg": "^8.13.0",
     "sqlite3": "^5.1.7"
   },
