--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: '3'
 services:
-  frontend_app:
-    build: ./front-end
-    ports:
-      - "5000:5000"
-    networks:
-      - my_network
+  # frontend_app:
+  #   build: ./front-end
+  #   ports:
+  #     - "5000:5000"
+  #   networks:
+  #     - my_network
 
   backend_app:
     build: ./backend
