--- a/front-end/package.json
+++ b/front-end/package.json
@@ -8,15 +8,19 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "chart.js": "^4.4.5",
+    "cross-env": "^7.0.3",
+    "d3": "^7.9.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.13.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "cross-env PORT=5000 react-scripts start",
+    "start": "cross-env PORT=8000 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
